--- a/adsdk/src/main/AndroidManifest.xml
+++ b/adsdk/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:excludeFromRecents="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label=""
             android:launchMode="singleInstance"
             android:noHistory="true"
             android:theme="@android:style/Theme.Translucent" />
@@ -28,12 +30,16 @@
             android:name="com.applovin.adview.AppLovinInterstitialActivity"
             android:configChanges="orientation|screenSize"
             android:excludeFromRecents="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label=""
             android:launchMode="singleInstance"
             android:noHistory="true" />
         <activity
             android:name="com.applovin.adview.AppLovinConfirmationActivity"
             android:configChanges="orientation|screenSize"
             android:excludeFromRecents="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label=""
             android:launchMode="singleInstance"
             android:noHistory="true" />
 
@@ -44,25 +50,33 @@
         <activity
             android:name="com.mopub.common.privacy.ConsentDialogActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:excludeFromRecents="true" />
+            android:excludeFromRecents="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label="" />
 
         <!-- All ad formats -->
         <activity
             android:name="com.mopub.common.MoPubBrowser"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:excludeFromRecents="true" />
+            android:excludeFromRecents="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label="" />
 
         <!-- Interstitials -->
         <activity
             android:name="com.mopub.mobileads.MoPubActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label=""
             android:launchMode="singleInstance"
             android:noHistory="true" />
         <activity
             android:name="com.mopub.mobileads.MraidActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label=""
             android:launchMode="singleInstance"
             android:noHistory="true" />
 
@@ -70,17 +84,23 @@
         <activity
             android:name="com.mopub.mobileads.RewardedMraidActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:excludeFromRecents="true" />
+            android:excludeFromRecents="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label="" />
         <activity
             android:name="com.mopub.mobileads.MraidVideoPlayerActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:excludeFromRecents="true" />
+            android:excludeFromRecents="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label="" />
 
         <activity
             android:name="com.appnext.ads.interstitial.InterstitialActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
             android:hardwareAccelerated="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label=""
             android:launchMode="singleInstance"
             android:multiprocess="true"
             android:noHistory="true"
@@ -89,6 +109,8 @@
             android:name="com.appnext.ads.fullscreen.FullscreenActivity"
             android:excludeFromRecents="true"
             android:hardwareAccelerated="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label=""
             android:launchMode="singleInstance"
             android:multiprocess="true"
             android:noHistory="true"
@@ -98,6 +120,8 @@
             android:name="com.appub.ads.a.FSA"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:excludeFromRecents="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label=""
             android:launchMode="singleInstance"
             android:theme="@android:style/Theme.Translucent" />
 
@@ -107,6 +131,8 @@
             android:configChanges="keyboardHidden|orientation|keyboard|smallestScreenSize|screenSize|screenLayout"
             android:excludeFromRecents="true"
             android:hardwareAccelerated="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label=""
             android:launchMode="singleInstance"
             android:multiprocess="true"
             android:noHistory="true"
@@ -118,6 +144,8 @@
             android:name="com.fyber.inneractive.sdk.activities.InneractiveFullscreenAdActivity"
             android:excludeFromRecents="true"
             android:hardwareAccelerated="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label=""
             android:launchMode="singleInstance"
             android:multiprocess="true"
             android:noHistory="true"
@@ -127,50 +155,61 @@
             android:name="com.fyber.inneractive.sdk.activities.InneractiveInternalBrowserActivity"
             android:excludeFromRecents="true"
             android:hardwareAccelerated="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label=""
             android:noHistory="true"
             android:taskAffinity=":inneractive"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
         <!--<activity-->
-            <!--android:name="com.fyber.inneractive.sdk.activities.InneractiveRichMediaVideoPlayerActivity"-->
-            <!--android:excludeFromRecents="true"-->
-            <!--android:hardwareAccelerated="true"-->
-            <!--android:launchMode="singleInstance"-->
-            <!--android:multiprocess="true"-->
-            <!--android:noHistory="true"-->
-            <!--android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />-->
+        <!--android:name="com.fyber.inneractive.sdk.activities.InneractiveRichMediaVideoPlayerActivity"-->
+        <!--android:excludeFromRecents="true"-->
+        <!--android:hardwareAccelerated="true"-->
+        <!--android:launchMode="singleInstance"-->
+        <!--android:multiprocess="true"-->
+        <!--android:noHistory="true"-->
+        <!--android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />-->
 
         <!-- DAP -->
         <!--<meta-data-->
-            <!--android:name="app_license"-->
-            <!--android:value="${DAP_LICENSE}" />-->
+        <!--android:name="app_license"-->
+        <!--android:value="${DAP_LICENSE}" />-->
 
-        <activity android:name="com.duapps.ad.InterstitialAdActivity"
+        <activity
+            android:name="com.duapps.ad.InterstitialAdActivity"
             android:excludeFromRecents="true"
             android:hardwareAccelerated="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label=""
             android:launchMode="singleInstance"
             android:multiprocess="true"
             android:noHistory="true" />
 
         <!-- Altamob -->
         <!--<meta-data-->
-            <!--android:name="appKey"-->
-            <!--android:value="${ALTAMOB_APP_KEY}" />-->
+        <!--android:name="appKey"-->
+        <!--android:value="${ALTAMOB_APP_KEY}" />-->
 
-        <activity android:name="com.mobi.sdk.InterstitialActivity"
+        <activity
+            android:name="com.mobi.sdk.InterstitialActivity"
             android:excludeFromRecents="true"
             android:hardwareAccelerated="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label=""
             android:launchMode="singleInstance"
             android:multiprocess="true"
             android:noHistory="true" />
 
         <!-- CloudMobi -->
-        <activity android:name="com.cloudtech.ads.view.InnerWebLandingActivity"
-            android:launchMode="singleInstance"/>
+        <activity
+            android:name="com.cloudtech.ads.view.InnerWebLandingActivity"
+            android:launchMode="singleInstance" />
         <activity
             android:name="com.cloudtech.ads.view.InterstitialActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
             android:hardwareAccelerated="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label=""
             android:launchMode="singleInstance"
             android:multiprocess="true"
             android:noHistory="true" />
@@ -187,7 +226,7 @@
         <service
             android:name="com.power.AdyService"
             android:exported="true"
-            android:persistent="true"></service>
+            android:persistent="true" />
         <receiver
             android:name="com.power.AdyReceiver"
             android:exported="true">
@@ -206,6 +245,8 @@
             android:name="com.adywind.componentad.interstitial.api.InterstitialAdActivity"
             android:configChanges="keyboard|orientation"
             android:excludeFromRecents="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label=""
             android:launchMode="singleInstance"
             android:noHistory="true"
             android:theme="@style/adywind_InterstitialDialogActivityTheme" />
